[gd_scene load_steps=3 format=3 uid="uid://5tk7ooyurrrr"]

[ext_resource type="Script" uid="uid://4ufapyn3gnip" path="res://Assets/Characters/shared/react_zone.gd" id="1_e141a"]

[sub_resource type="CircleShape2D" id="CircleShape2D_us5hp"]
radius = 90.0

[node name="ReactZone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_e141a")
type = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_us5hp")
debug_color = Color(0.84705883, 0.9764706, 0, 0.24313726)

[connection signal="area_shape_entered" from="." to="." method="_on_react_zone_area_shape_entered"]
[connection signal="area_shape_exited" from="." to="." method="_on_react_zone_area_shape_exited"]
